examples/v0.4/errors/missing_required_property.nova
User: M = {
    name: S,
    age: N
}

user: User = {
    name = "Varun"
}

/*
Expected Error:

Missing required property 'age'.
*/